# ReactionParticles

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  generate_fields.m  main.cpp  permeability.m  reaction.cpp  reaction.h  rxn_cycle2D.m  rxnmass1D.m  rxnrw1D.m  rxnrw2D.m  vel1.mat  velocity_function.m
test/: main.cpp  reaction.cpp
